[package]
name = "rust-crontab"
version = "0.1.1"
edition = "2021"
authors = [ "wstreet7 <wstreet7@outlook.com>" ]
description = "a crate for croneditor, which can read and write crontab"
readme = "README.md"
homepage = "https://github.com/wstreet/croneditor"
keywords = [ "crontab", "cron", "editor" ]
license = "MIT OR Apache-2.0"

[dependencies]
tempfile = "3.3" 
mockall = "0.11"
assert_cmd = "2.0"
serde = { version = "1.0", features = ["derive"] }
